# aegis

./: .env.example  .gitignore  Cargo.toml
.github/workflows/: ci.yml
scripts/: README.md  install-hooks.ps1  pre-commit  pre-commit.ps1  uninstall-hooks.ps1
src/: main.rs
src/asgi_core/: enums.rs  events.rs  mod.rs  server.rs
src/core/: enums.rs  events.rs  mod.rs  response.rs  structs.rs
src/listener/: enums.rs  events.rs  listener.rs  mod.rs
src/protocols/tcp/: connection.rs  listener.rs  mod.rs  server.rs
tests/: rest_runner.ps1
